# Space-Invaders

./: CMakeLists.txt  README.md  build.bat
.github/: copilot-instructions.md
include/: Bullet.h  Enemy.h  Game.h  GameConfig.h  Player.h
src/: Bullet.cpp  Enemy.cpp  Game.cpp  GameConfig.cpp  Player.cpp  main.cpp
